[package]
name = "aschord"
version = "0.1.0"
authors = ["Yuchen Zhong <yuchen.post@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A command line tool for showing how to play guitar chords"
readme = "README.md"
homepage = "https://github.com/yzhong52/ascii_chords"
repository = "https://github.com/yzhong52/ascii_chords"
keywords = ["cli", "ascii", "guitar", "chords"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
